helm/hyper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyper-service
  namespace: hyper-dev
spec:
  selector:
    app: hyper-scale-ops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
