helm/hyper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyper-ingress
  namespace: hyper-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hyper.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hyper-service
                port:
                  number: 80
